# hotki

./: .agents.md  .edev.toml  .gitignore  CONFIG.md  Cargo.toml  DEV.md  GEMINI.md  README.md  STYLE.md  THEMES.md  clippy.toml
crates/config/: Cargo.toml
crates/config/luau/: actions.luau  hotki.d.luau  hotki_config.d.luau  hotki_core.d.luau  hotki_style.d.luau  renderers.luau
crates/config/src/: check.rs  cursor.rs  defaults.rs  docs.rs  error.rs  keys.rs  lib.rs  loader.rs  mode.rs  notify.rs  raw.rs  rhai.rs  runtime.rs  style.rs  test_merge.rs  test_parse.rs  test_rhai.rs  themes.rs  types.rs
crates/config/src/dynamic/: apps.rs  binding_style.rs  config.rs  constants.rs  dsl.rs  engine.rs  handler.rs  loader.rs  mod.rs  render.rs  selector.rs  style_api.rs  test_dynamic.rs  types.rs  util.rs  validation.rs
crates/config/src/keymode/: mod.rs  state.rs
crates/config/src/script/: action_prelude.rs  apps.rs  binding_style.rs  callback.rs  config.rs  diagnostics.rs  engine.rs  handler.rs  host_action.rs  host_args.rs  host_hotki.rs  host_parse.rs  host_runtime.rs  host_themes.rs  host_userdata.rs  imports.rs  loader.rs  mod.rs  module_source.rs  render.rs  selector.rs  test_script.rs  types.rs  util.rs
crates/config/src/themes/: error.rs  loader.rs  mod.rs
crates/config/styles/: default.luau
crates/config/themes/: charcoal.ron  dark-blue.ron  default.ron  solarized-dark.ron  solarized-light.ron
crates/hotki/: Cargo.toml
crates/hotki-app/: Cargo.toml
crates/hotki-app/src/: app.rs  details.rs  devtools.rs  diagnostics.rs  display.rs  fonts.rs  harness_control.rs  health.rs  hud.rs  logs.rs  logs_window.rs  main.rs  main_window.rs  notification.rs  nswindow.rs  overlay.rs  permissions.rs  runtime.rs  selector.rs  tray.rs  ui_delivery.rs
crates/hotki-app/src/connection_driver/: mod.rs  ui_sink.rs
crates/hotki-engine/: Cargo.toml  README.md
crates/hotki-engine/src/: actions.rs  deps.rs  dispatch.rs  error.rs  focus.rs  key_binding.rs  key_state.rs  keymode.rs  lib.rs  notification.rs  refresh.rs  regex_cache.rs  relay.rs  repeater.rs  runtime.rs  selector.rs  selector_controller.rs  services.rs  test_support.rs  ticker.rs  world_sync.rs
crates/hotki-engine/tests/: integration_tests.rs  window_ops_mock.rs
crates/hotki-protocol/: Cargo.toml
crates/hotki-protocol/src/: display.rs  focus.rs  input.rs  lib.rs  rpc.rs  style.rs  ui.rs
crates/hotki-protocol/src/ipc/: codec.rs
crates/hotki-server/: Cargo.toml
crates/hotki-server/src/: client.rs  error.rs  lib.rs  loop_wake.rs  managed_server.rs  process.rs  server.rs  shutdown.rs  smoketest_bridge.rs  util.rs
crates/hotki-server/src/ipc/: client.rs  mod.rs  rpc.rs  server.rs  service.rs  value.rs
crates/hotki-shots/: Cargo.toml
crates/hotki-shots/fixtures/: config.luau
crates/hotki-shots/src/: main.rs
crates/hotki-tester/: Cargo.toml
crates/hotki-tester/src/: backend.rs  cli.rs  diagnostics.rs  error.rs  main.rs  place.rs
crates/hotki-world/: Cargo.toml
crates/hotki-world/src/: ax_read_pool.rs  events.rs  frames.rs  geometry.rs  lib.rs  platform.rs  polling.rs  state.rs  test_support.rs  test_world.rs  types.rs  view.rs  view_util.rs  wait.rs
crates/hotki-world/src/mimic/: config.rs  event_loop.rs  helper_app.rs  mod.rs  registry.rs  runtime.rs  scenario.rs  world.rs
crates/hotki-world/tests/: ax_read_pool_eviction.rs  ax_read_pool_limits.rs  basic.rs  lint_async_attrs.rs  world_ax_hint.rs  world_basic.rs  world_command_guards.rs  world_events.rs  world_eviction.rs  world_frames.rs  world_respawn.rs  world_spaces.rs
crates/hotki/src/: app.rs  connection_driver.rs  control.rs  details.rs  devtools.rs  display.rs  fonts.rs  hud.rs  logs.rs  macos_window.rs  main.rs  notification.rs  nswindow.rs  overlay.rs  permissions.rs  runtime.rs  selector.rs  settings.rs  smoketest_bridge.rs  tray.rs
crates/hotki/src/connection_driver/: bridge.rs  mod.rs  ui_sink.rs
crates/hotki/tests/: examples_parse.rs
crates/keymode/: Cargo.toml
crates/keymode/src/: error.rs  lib.rs  media.rs  state.rs
crates/log-forward/: Cargo.toml
crates/log-forward/src/: lib.rs
crates/log-forward/tests/: log_forward.rs
crates/logging/: Cargo.toml  build.rs
crates/logging/src/: fmt.rs  forward.rs  lib.rs
crates/mac-focus-watcher/: Cargo.toml
crates/mac-focus-watcher/src/: ax.rs  event.rs  lib.rs  ns.rs  watcher.rs
crates/mac-hotkey/: Cargo.toml
crates/mac-hotkey/src/: error.rs  keymap.rs  lib.rs  policy.rs  status.rs  sys.rs
crates/mac-keycode/: Cargo.toml  README.md  build.rs  generate.sh
crates/mac-keycode/data/: keycodes.txt
crates/mac-keycode/src/: chord.rs  key.rs  lib.rs  modifiers.rs  scancode.rs  spec.rs
crates/mac-winops/: Cargo.toml  README.md
crates/mac-winops/examples/: fullscreen.rs  probe.rs  winops.rs
crates/mac-winops/src/: ax.rs  ax_observer.rs  ax_private.rs  cfutil.rs  coregraphics.rs  error.rs  focus_dir.rs  frame_storage.rs  fullscreen.rs  geom.rs  geometry.rs  hide.rs  lib.rs  main_thread_ops.rs  nswindow.rs  observability.rs  ops.rs  place.rs  raise.rs  screen.rs  screen_util.rs  status.rs  wait.rs  window.rs
crates/mac-winops/src/focus/: ax.rs  cg.rs  event.rs  mod.rs  ns.rs  watcher.rs
crates/mac-winops/src/place/: adapter.rs  apply.rs  common.rs  deterministic_tests.rs  engine.rs  fallback.rs  metrics.rs  mod.rs  (+5 more)
crates/relaykey/: Cargo.toml
crates/relaykey/src/: error.rs  lib.rs  sys.rs
crates/smoketest/: Cargo.toml  README.md
crates/smoketest/src/: artifacts.rs  binding_watcher.rs  cli.rs  config.rs  error.rs  focus.rs  focus_guard.rs  helper_window.rs  helpers.rs  hide.rs  lib.rs  logging.rs  main.rs  orchestrator.rs  proc_registry.rs  process.rs  raise.rs  repeat.rs  results.rs  runtime.rs  screenshot.rs  server_drive.rs  session.rs  space_probe.rs  suite.rs  test_runner.rs  tmp_paths.rs  ui.rs  ui_interaction.rs  util.rs  warn_overlay.rs  winhelper.rs  world.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: artifact.rs  bundle.rs  cmd.rs  edev.rs  error.rs  install.rs  lib.rs  luau.rs  main.rs  screenshots.rs  test.rs  tidy.rs  workspace.rs
(+140 files in other folders)
