[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "Global hotkey manager"
license = "MIT"
repository = "https://github.com/cortesi/hotkey-manager"
keywords = ["shortcuts", "shortcut", "hotkey"]


[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/hotki-keys"]

[workspace.dependencies]
tokio = "1.47.1"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3"
regex = "1.11.2"
serde = "1.0.219"
ron = "0.11.0"
once_cell = "1.21.3"
libc = "0.2.175"
tokio-util = "0.7.16"
async-trait = "0.1.89"
crossbeam-channel = "0.5.15"
futures = "0.3.31"
