[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Unified configuration types for hotki (modes, UI theme, parsing)"
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
colornames = "0.0.6"
mac-keycode = { path = "../mac-keycode" }
thiserror = { workspace = true }
regex = { workspace = true }
hotki-protocol = { path = "../hotki-protocol" }
rhai = { version = "1.23.6", features = ["serde", "sync"] }
tracing.workspace = true
