[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Unified configuration types for hotki (modes, UI theme, parsing)"
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
colornames = "0.0.6"
mac-keycode = { path = "../mac-keycode" }
thiserror = { workspace = true }
regex = { workspace = true }
hotki-protocol = { path = "../hotki-protocol" }
tracing.workspace = true
mlua = { version = "0.11.6", features = ["luau", "serialize", "vendored", "send"] }
luau-analyze = { path = "../../../luau-analyze/crates/luau-analyze" }
