[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Unified configuration types for hotki (modes, UI theme, parsing)"
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
colornames = "0.0.6"
mac-keycode = { path = "../mac-keycode" }
thiserror = { workspace = true }
regex = { workspace = true }
hotki-protocol = { path = "../hotki-protocol" }
tracing.workspace = true
ruau = { version = "0.0.1", default-features = false }
