[package]
name = "hotki-engine"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Hotki core engine: effects, orchestrator, and key handling"

[dependencies]
keymode = { path = "../keymode" }
config = { path = "../config" }
hotki-protocol = { path = "../hotki-protocol" }
mac-keycode = { path = "../mac-keycode" }
mac-hotkey = { path = "../mac-hotkey" }
hotki-world = { path = "../hotki-world" }

tokio = { workspace = true, features = ["rt", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tokio-util = { workspace = true }
thiserror = { workspace = true }
relaykey = { version = "0.0.1", path = "../relaykey" }
regex = { workspace = true }
lru = "0.16.1"
parking_lot = "0.12.4"
