[package]
name = "hotki-engine"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Hotki core engine: effects, orchestrator, and key handling"
autotests = false

[dependencies]
config = { path = "../config" }
hotki-protocol = { path = "../hotki-protocol" }
mac-keycode = { path = "../mac-keycode" }
mac-hotkey = { path = "../mac-hotkey" }
hotki-world = { path = "../hotki-world" }

tokio = { workspace = true, features = ["rt", "sync", "time", "macros", "test-util", "process", "io-util"] }
tracing = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
relaykey = { path = "../relaykey" }
parking_lot = { workspace = true }
nucleo = "0.5.0"
libc.workspace = true

[dev-dependencies]
hotki-world = { path = "../hotki-world", features = ["test-utils"] }
