[package]
name = "hotki-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared UI protocol types for Hotki"
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
mrpc = "0.0.6"
rmp-serde = "1"
thiserror = { workspace = true }
mac-keycode = { path = "../mac-keycode" }
eframe = "0.34.1"
egui = "0.34.1"
egui_extras = "0.34.1"
tao = "0.35.0"
toml = "1.1.0"
toml_datetime = "1.1.0"
toml_edit = "0.25.8"
