[package]
name = "hotki-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared UI protocol types for Hotki"
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
mrpc = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
mac-keycode = { path = "../mac-keycode" }
