[package]
name = "hotki-server"
version = "0.1.0"
authors = ["Aldo Cortesi <aldo@corte.si>"]
edition.workspace = true
description = "A general-purpose global hotkey manager"
license = "MIT"

[dependencies]
mac-hotkey = { path = "../mac-hotkey" }
config = { path = "../config" }
hotki-protocol = { path = "../hotki-protocol" }
logging = { path = "../logging" }
permissions = { path = "../permissions" }
hotki-engine = { path = "../hotki-engine" }
hotki-world = { path = "../hotki-world" }

tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tao = "0.34"
once_cell = { workspace = true }
libc = { workspace = true }
rmp-serde = "1.3.0"
mrpc = "0.0.6"
async-trait = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
parking_lot = "0.12.4"

# relaykey used in dev-dependencies for test-utils
[package.metadata.cargo-machete]
ignored = ["relaykey"]

[dev-dependencies]
relaykey = { path = "../relaykey", features = ["test-utils"] }
