[package]
name = "hotki-server"
version = "0.1.0"
authors = ["Aldo Cortesi <aldo@corte.si>"]
edition.workspace = true
description = "A general-purpose global hotkey manager"
license = "MIT"

[dependencies]
mac-hotkey = { path = "../mac-hotkey" }
config = { path = "../config" }
hotki-protocol = { path = "../hotki-protocol" }
logging = { path = "../logging" }
permissions = { path = "../permissions" }
hotki-engine = { path = "../hotki-engine" }
hotki-world = { path = "../hotki-world" }

tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tao = "0.35.0"
once_cell = { workspace = true }
libc = { workspace = true }
rmp-serde = "1.3.0"
mrpc = "0.0.6"
async-trait = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
parking_lot = "0.12.5"
serde_json.workspace = true
eframe = "0.34.1"
egui = "0.34.1"
egui_extras = "0.34.1"
toml = "1.1.0"
toml_datetime = "1.1.0"
toml_edit = "0.25.8"

[package.metadata.cargo-machete]
ignored = []
