[package]
name = "hotki-server"
version = "0.1.0"
authors = ["Aldo Cortesi <aldo@corte.si>"]
edition.workspace = true
description = "A general-purpose global hotkey manager"
license = "MIT"

[dependencies]
mac-hotkey = { path = "../mac-hotkey" }
hotki-protocol = { path = "../hotki-protocol" }
logging = { path = "../logging" }
permissions = { path = "../permissions" }
hotki-engine = { path = "../hotki-engine" }
hotki-world = { path = "../hotki-world" }

tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "test-util"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tao = "0.35.0"
once_cell = { workspace = true }
libc = { workspace = true }
rmp-serde = { workspace = true }
mrpc = { workspace = true }
async-trait = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
mac-keycode = { path = "../mac-keycode" }

[package.metadata.cargo-machete]
ignored = []
