[package]
name = "hotki-shots"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
core-foundation = { workspace = true }
core-graphics = { workspace = true }
hotki-protocol = { path = "../hotki-protocol" }
hotki-server = { path = "../hotki-server" }
mac-keycode = { path = "../mac-keycode" }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
