[package]
name = "hotki-tester"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
config = { path = "../config" }
hotki-server = { path = "../hotki-server" }
hotki-protocol = { path = "../hotki-protocol" }
logging = { path = "../logging" }
mac-winops = { path = "../mac-winops" }
permissions = { path = "../permissions" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
humantime = "2.1"
ron = { workspace = true }
hotki-world = { version = "0.1.0", path = "../hotki-world" }
hotki-world-ids = { version = "0.0.1", path = "../hotki-world-ids" }
time = { version = "0.3.43", features = ["formatting", "macros", "parsing"] }
