[package]
name = "hotki-world"
version = "0.1.0"
edition = "2024"
description = "World service: window state snapshot + events for Hotki"
license = "MIT"

[features]
test-utils = []

[dependencies]
tokio = { workspace = true }
permissions = { path = "../permissions" }
parking_lot = "0.12.5"
async-trait.workspace = true
core-foundation = "0.10.1"
core-graphics = "0.25.0"
hotki-protocol = { version = "0.0.1", path = "../hotki-protocol" }
serde = { workspace = true, features = ["derive"] }
