[package]
name = "hotki-world"
version = "0.1.0"
edition = "2024"
description = "World service: window state snapshot + events for Hotki"
license = "MIT"

[features]
test-utils = []

[dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "test-util"] }
permissions = { path = "../permissions" }
parking_lot = { workspace = true }
async-trait.workspace = true
core-foundation = { workspace = true }
core-graphics = { workspace = true }
hotki-protocol = { path = "../hotki-protocol" }
serde = { workspace = true, features = ["derive"] }
