[package]
name = "hotki"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

# objc2-quartz-core used via unsafe FFI (setCornerRadius)
[package.metadata.cargo-machete]
ignored = ["objc2-quartz-core"]

[dependencies]
hotki-server = { version = "0.1.0", path = "../hotki-server" }
permissions = { path = "../permissions" }
config = { path = "../config" }
hotki-protocol = { path = "../hotki-protocol" }
logging = { path = "../logging" }

eframe = "0.33.3"
egui = "0.33.3"
image = "0.25.9"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tray-icon = "0.21.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
egui_extras = "0.33.3"
clap = { workspace = true, features = ["derive"] }
parking_lot = "0.12.5"
objc2-quartz-core = "0.3.2"
hotki-world = { version = "0.1.0", path = "../hotki-world" }
mac-keycode = { version = "0.0.2", path = "../mac-keycode" }
