[package]
name = "hotki"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
config = { path = "../config" }
logging = { path = "../logging" }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
