[package]
name = "keymode"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
mac-keycode = { path = "../mac-keycode" }
tracing = "0.1"
regex = "1"
config = { path = "../config" }
hotki-protocol = { path = "../hotki-protocol" }

[dev-dependencies]
ron = "0.11.0"
