[package]
name = "keymode"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
mac-keycode = { path = "../mac-keycode" }
tracing = { workspace = true }
regex = { workspace = true }
config = { path = "../config" }
hotki-protocol = { path = "../hotki-protocol" }

[dev-dependencies]
ron = { workspace = true }
