[package]
name = "keymode"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
mac-keycode = { path = "../mac-keycode" }
config = { path = "../config" }
hotki-protocol = { path = "../hotki-protocol" }
thiserror = { workspace = true }

[dev-dependencies]
ron = { workspace = true }
