[package]
name = "log-forward"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Tracing layer that forwards logs to UI via hotki protocol"
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
hotki-protocol = { path = "../hotki-protocol" }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "registry"] }
