[package]
name = "logging"
version = "0.1.0"
edition = "2024"
description = "Shared logging helpers and CLI args for hotki workspace"
license = "MIT"

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true, features = ["derive"] }

