[package]
name = "logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared logging helpers, CLI args, and tracing utilities for hotki workspace"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# CLI argument parsing
clap = { workspace = true, features = ["derive"] }

# Tracing infrastructure
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "registry"] }

# Forward module dependencies
hotki-protocol = { path = "../hotki-protocol" }
tokio = { workspace = true, features = ["sync"] }
parking_lot = "0.12.5"
