[package]
name = "mac-hotkey"
version = "0.1.0"
edition = "2024"
description = "macOS-only global hotkey manager with repeat support"
license = "MIT"
authors = ["Aldo Cortesi <aldo@corte.si>"]

[lib]
name = "mac_hotkey"
path = "src/lib.rs"

[dependencies]
mac-keycode = { path = "../mac-keycode" }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
core-foundation = { workspace = true }
permissions = { path = "../permissions" }
core-graphics = { workspace = true }
parking_lot = { workspace = true }
arc-swap = "1.9.0"
objc2-app-kit = { workspace = true, features = ["NSRunningApplication", "libc"] }
