[package]
name = "mac-keycode"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]

[build-dependencies]
anyhow = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
