[package]
name = "mac-keycode"
version = "0.0.2"

edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }

# cargo-machete doesn't detect build-dep usage
[package.metadata.cargo-machete]
ignored = ["anyhow", "proc-macro2", "quote", "syn"]

[build-dependencies]
anyhow = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
