[package]
name = "mac-winops"
version = "0.1.0"
edition = "2024"
description = "macOS window operations (native and non-native fullscreen, etc.)"
license = "MIT"

[dependencies]
thiserror = "2"
once_cell = "1"
tracing = "0.1"

core-foundation = "0.10.1"
core-graphics = "0.25.0"
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"

relaykey = { path = "../relaykey" }
mac-keycode = { path = "../mac-keycode" }

