[package]
name = "mac-winops"
version = "0.1.0"
edition = "2024"
description = "macOS window operations (native and non-native fullscreen, etc.)"
license = "MIT"

[dependencies]
thiserror = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }

core-foundation = "0.10.1"
core-graphics = "0.25.0"
objc2 = "0.6.2"
objc2-app-kit = { version = "0.3.1", features = ["NSRunningApplication", "NSScreen", "libc"] }
objc2-foundation = "0.3.1"

relaykey = { path = "../relaykey" }
mac-keycode = { path = "../mac-keycode" }
block2 = "0.6"
tokio = { workspace = true, features = ["sync"] }
tao = "0.34"
libc = { workspace = true }
permissions = { version = "0.1.0", path = "../permissions" }
parking_lot = "0.12.4"
crossbeam-channel.workspace = true
hotki-world-ids = { version = "0.0.1", path = "../hotki-world-ids" }



[dev-dependencies]
regex = { workspace = true }
clap = { workspace = true, features = ["derive"] }
proptest = "1.7.0"
