[package]
name = "relaykey"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
test-utils = []

[dependencies]
mac-keycode = { path = "../mac-keycode" }
eventtag = { path = "../eventtag" }

thiserror = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
core-graphics = { version = "0.25.0", features = ["elcapitan"] }
permissions = { version = "0.1.0", path = "../permissions" }
