[package]
name = "relaykey"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
mac-keycode = { path = "../mac-keycode" }
mac-hotkey = { path = "../mac-hotkey" }

thiserror = { workspace = true }
tracing = { workspace = true }
core-graphics = { workspace = true, features = ["elcapitan"] }
permissions = { path = "../permissions" }
