[package]
name = "smoketest"
version = "0.1.0"
edition = "2024"

[features]
default = []

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
logging = { path = "../logging" }
hotki-server = { path = "../hotki-server" }
hotki-engine = { path = "../hotki-engine" }
hotki-protocol = { path = "../hotki-protocol" }
mac-keycode = { path = "../mac-keycode" }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
winit = "0.30"
objc2-app-kit = { version = "0.3.2", features = ["NSScreen", "NSTextField", "NSFont", "libc"] }
objc2-foundation = "0.3.2"
objc2 = "0.6.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
config = { version = "0.0.1", path = "../config" }
permissions = { version = "0.1.0", path = "../permissions" }
thiserror = { workspace = true }
libc = { workspace = true }
parking_lot = "0.12.5"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
core-graphics = "0.25.0"
core-foundation = "0.10.1"
