[package]
name = "smoketest"
version = "0.1.0"
edition = "2024"

[features]
default = []

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
logging = { path = "../logging" }
hotki-server = { path = "../hotki-server" }
hotki-protocol = { path = "../hotki-protocol" }
mac-keycode = { path = "../mac-keycode" }
winit = "0.30"
objc2-app-kit = { workspace = true, features = ["NSScreen", "NSTextField", "NSFont", "libc"] }
objc2-foundation = { workspace = true }
objc2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
config = { path = "../config" }
thiserror = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
core-graphics = { workspace = true }
core-foundation = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
