[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
config = { path = "../config" }
toml = "1.1.2"
serde_json.workspace = true
libc.workspace = true
